로그인, 세션

--- a/src/style.scss
+++ b/src/style.scss
@@ -23,6 +23,12 @@ body {
   }
 }
 
+@media (min-width: 576px) and (max-width: 767px) {
+  .container, .container-sm {
+      max-width: 708px;
+  }
+}
+
 .mycontainer {
   padding-top: 50px;
 }
@@ -94,10 +100,6 @@ svg {
 
 .text-white {
   color: #fff;
-}
-
-.border-lighter {
-  border-width: 1px !important;
 }
 
 .border-none {
@@ -256,6 +258,9 @@ header {
   }
   @media (max-width: 575px){
     height: 60px;
+    .top-ad {
+      display: none;
+    }
   }
   .hdtop {
     height: 100px;
@@ -389,10 +394,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-
-  @media (max-width: 575px) {
-    display: none;
-  }
   p {
     margin: 0;
   }
@@ -406,6 +407,7 @@ header {
   border-radius: 0.3125rem;
 }
 .prodInfo {
+  line-height: 1.3;
   .productName {
     color: #333;
     font-size: 18px;
@@ -741,14 +743,12 @@ footer {
         button:first-child {
           color: #666;
           width: 50%;
-          font-weight: 500;
           &:hover {
             color: #fff;
           }
         }
         button:nth-child(2) {
           width: 50%;
-          font-weight: 500;
           border: 1px solid #214AEE !important;
         }
       }
@@ -1176,11 +1176,22 @@ footer {
   }
   .mdswiper{
     width: 615px;
+    position: relative;
+    @media (max-width: 991px) {
+      &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: -100%;
+        background-color: #fff;
+      }
+    }
     @media (max-width: 575px) {
       width: 80vw;
       margin-left: -0.75rem;
       .swiper-slide img {
-        border-radius: 0;
+        border-radius: 0 0.3125rem 0.3125rem 0;
         width: 100%;
       }
     }
@@ -1211,7 +1222,7 @@ footer {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    @media (min-width: 576px) and (max-width: 941px){
+    @media (min-width: 576px) and (max-width: 899px){
       transform: translateX(-46%);
     }
   }
@@ -1331,6 +1342,8 @@ footer {
         width: 100%;
         img {
           border-radius: 0.3125rem;
+          width: 80px;
+          height: 80px;
         }
         p {
           width: 100%;
@@ -1362,6 +1375,43 @@ footer {
     margin-left: 5px;
     transform: translateY(4px);
     background: url(../public/assets/img/maintitle/cart.png);
+  }
+}
+
+.bestproduct {
+  gap: 12px;
+  &>a {
+    width: 100%;
+    @media (max-width: 767px) {
+      width: 50%;
+      min-width: 172px;
+    }
+  }
+  &>div {
+    width: 100%;
+    @media (max-width: 767px) {
+      width: 48%;
+    }
+    .mobilecart {
+      gap: 10px;
+    }
+  }
+  .prodimg {
+    margin: 0;
+  }
+  .price {
+    margin-top: 20px;
+  }
+  .ratingNum {
+    order: unset;
+    line-height: 1;
+    color: #FF4A11;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: -2px;
+  }
+  .prodInfo {
+    height: 100%;
   }
 }
 
