--- a/src/layout/Mbtab.module.scss
+++ b/src/layout/Mbtab.module.scss
@@ -27,6 +27,7 @@
   height: 100vh;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
 
   background-color: #fff;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
@@ -41,6 +42,10 @@
     border: none;
     outline: none;
     background-color: inherit;
+  }
+
+  .close{
+    height: 50px;
   }
 }
 
@@ -60,7 +65,7 @@
   background-color: rgba(210, 210, 210, 0.3);
   color: #888;
   border-radius: 0.5rem;
-  font-size: clamp(0.625rem, 2vw, 1rem);
+  font-size: clamp(0.65rem, 2vw, 1rem);
   transition: background-color 0.3s ease;
   cursor: pointer;
   word-break: keep-all;
@@ -70,7 +75,7 @@
   }
   .iconSvg {
     width: auto;
-    height: 35%; 
+    height: 38%; 
   }
   span {
     margin-top: 0.5rem;
@@ -78,4 +83,43 @@
     text-align: center;
   }
 }
+.text{
+  flex-direction:unset;
+  height: 3.125rem;
+  padding: 0rem 0.9375rem;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1rem;
+  line-height: normal;
+  
+  span{margin:0;}
+}
 
+// 카테고리
+.scrollContainer {
+  max-height: 22.825rem;
+  overflow-y: auto;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  gap: 0.5rem;
+}
+
+.hovermenu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column; 
+  gap: 0.625rem;
+}
+
+.menu {
+  padding: 0.9375rem 0.625rem;
+  background-color: #fff;
+  border-radius: 0.375rem;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #f3f3f3;
+  }
+}
