--- a/src/contents/Coupon.scss
+++ b/src/contents/Coupon.scss
@@ -8,13 +8,47 @@
   display: inline-block;
   margin-right: 10px;
   padding: 1.25rem 0;
+
+  @media (max-width: 991px) {
+    padding: 0;
+  }
 }
 
 .card-body .card-text {
   font-size: 1.375rem;
   color: #666;
+  display: inline-block;
+
+  @media (max-width: 991px) {
+    display: block;
+    padding-bottom: 1.25rem
+  }
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col {
+  flex: 1 1 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 991px) {
+
+  .row {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .col {
+    flex: 1 1 50%;
+  }
+
+}
 
 
 .container .button-common {
@@ -32,6 +66,7 @@
     color: #fff;
   }
 }
+
 
 /* 버튼 숨기기/보이기 */
 .container .button-toggle {
@@ -57,6 +92,7 @@
     transform: rotate(90deg);
   }
 }
+
 
 /* 쿠폰 안내 내용 */
 .box-notice {
@@ -92,6 +128,7 @@
   }
 }
 
+
 /* 모달 */
 .modal-header .modal-title {
   font-size: 1.325rem;
@@ -123,6 +160,7 @@ body.modal-open {
   padding-right: 0px !important;
 }
 
+
 /* 랜덤쿠폰 */
 .custom-list {
   list-style-type: none;
@@ -136,23 +174,38 @@ body.modal-open {
   color: #333;
 }
 
+.box-column {
+  margin: 0 2rem;
+}
 
+@media (max-width: 991px) {
+  .box-column {
+    margin: 0;
+  }
 
-
-/* 스타일 통합 및 추가 */
-.container .button-common {
-  width: 100%;
-  margin-top: 1.25rem;
-  background-color: #fff;
-  border: 2px solid #214aee;
-  color: #333;
-  font-size: 1.25rem;
-  padding: 0.625rem 1.25rem;
-  border-radius: 5px;
-
-  &:hover {
-    background-color: #214aee;
-    color: #fff;
+  .image-random {
+    margin: 0 auto;
+    padding-top: 1.25rem;
+    width: 33.33%;
+    justify-content: center;
   }
 }
 
+
+
+  /* 스타일 통합 및 추가 */
+  .container .button-common {
+    width: 100%;
+    margin-top: 1.25rem;
+    background-color: #fff;
+    border: 2px solid #214aee;
+    color: #333;
+    font-size: 1.25rem;
+    padding: 0.625rem 1.25rem;
+    border-radius: 5px;
+
+    &:hover {
+      background-color: #214aee;
+      color: #fff;
+    }
+  }
