--- a/src/layout/Mbtab.module.scss
+++ b/src/layout/Mbtab.module.scss
@@ -1,3 +1,4 @@
+
 .menuOverlay {
   position: fixed;
   top: 0;
@@ -28,6 +29,7 @@
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
+  line-height: normal;
 
   background-color: #fff;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
@@ -38,21 +40,28 @@
     transform: translateX(0);
   }
 
-  button {
+  .closeButton {
     border: none;
     outline: none;
     background-color: inherit;
   }
+}
 
   .close{
-    height: 50px;
+    height: 50px !important;
+    border-color: red;
   }
-}
 
 .mbnav {
   display: flex; 
   gap: 0.625rem;
   width: 100%;
+}
+
+.cuponImg{
+  max-height: 60px;
+  width: auto;
+  object-fit: contain;
 }
 
 .icon {
@@ -65,7 +74,7 @@
   background-color: rgba(210, 210, 210, 0.3);
   color: #888;
   border-radius: 0.5rem;
-  font-size: clamp(0.65rem, 2vw, 1rem);
+  font-size: clamp(0.8rem, 2vw, 1rem);
   transition: background-color 0.3s ease;
   cursor: pointer;
   word-break: keep-all;
@@ -83,6 +92,16 @@
     text-align: center;
   }
 }
+
+.login{
+  padding: 1.25rem 3.125rem;
+  flex-direction: column;
+  border-radius: 0.5rem;
+  background: rgba(210, 210, 210, 0.30);
+  color: #666;
+  gap: 0.9375rem;
+}
+
 .text{
   flex-direction:unset;
   height: 3.125rem;
@@ -90,7 +109,6 @@
   justify-content: space-between;
   align-items: center;
   font-size: 1rem;
-  line-height: normal;
   
   span{margin:0;}
 }
